--- a/package.json
+++ b/package.json
@@ -34,12 +34,20 @@
     "cross-env": "^6.0.0",
     "del": "^5.1.0",
     "dotenv": "^8.1.0",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "google-auth-library": "^5.5.1",
     "http-status": "^1.3.2",
     "js-yaml": "^3.13.1",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "nodemailer": "^6.3.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.10.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
+    "server-destroy": "^1.0.1",
     "structure": "^1.8.0",
     "swagger-ui-express": "^4.1.1"
   },
