--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@amberjs/sql-connector": "^1.0.3",
     "awilix": "^4.2.2",
     "awilix-express": "^2.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -44,6 +45,8 @@
     "method-override": "^3.0.0",
     "nodemailer": "^6.3.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "passport": "^0.4.0",
+    "passport-google-plus-token": "^2.1.0",
     "pdfkit": "^0.10.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
